src/objects/NQT_Sales_Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>NQT_CPR__c</fullName>
        <label>CPR</label>
        <referenceTo>CPR__c</referenceTo>
        <relationshipName>Sales_Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NQT_File_Description__c</fullName>
        <inlineHelpText>Please enter value.</inlineHelpText>
        <label>File Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Deliverable_Type__c</fullName>
        <inlineHelpText>Please select one</inlineHelpText>
        <label>Sales Deliverable Type</label>
        <picklist>
            <picklistValues>
                <fullName>Final Quote Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final SOW PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Quote PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NQT Sales Deliverable</label>
    <nameField>
        <label>Sales Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>